wai-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami
  namespace: wai-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whereami
      version: v1
  template:
    metadata:
      labels:
        app: whereami
        version: v1
    spec:
      serviceAccountName: whereami-ksa
      containers:
      - name: whereami
        image: gcr.io/alexmattson-scratch/whereami:v1.0
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
