wai-1/service.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: whereami
  namespace: wai-1
  labels:
    app: whereami
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http # adding for Istio
  selector:
    app: "whereami"
