wai-1/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whereami
  namespace: wai-1
spec:
  host: whereami
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
